apps/hermes-agent/components/dashboard/patch-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hermes-agent
spec:
  ports:
    - name: dashboard
      appProtocol: http
      port: 9119
      targetPort: dashboard
