apps/hermes-agent/components/dashboard/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hermes-agent-dashboard
spec:
  hostnames:
    - dashboard.automata.i.shikanime.studio
  parentRefs:
    - name: hermes-agent
      sectionName: https
  rules:
    - backendRefs:
        - name: hermes-agent
          port: 9119
